@@ -31,6 +31,7 @@ Other features
  * Remove sticky footer on small devices, so that content is not blocked and more easily editable (Saeed Tahmasebi)
  * Add ability to replace the default Wagtail logo in the userbar, via ``branding_logo`` block (Meteor0id)
  * Add `alt` property to `ImageRenditionField` api representation (Liam Mullens)
+ * Add `purge_revisions` management command to purge old page revisions (Jacob Topp-Mugglestone, Tom Dyson)
 
 
 Bug fixes
